--- a/main.html
+++ b/main.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <link rel="stylesheet" href="design/carousel.css">
-    <link rel="stylesheet" href="design/weather.css">
+    <link rel="stylesheet" href="style/carousel.css">
+    <link rel="stylesheet" href="style/weather.css">
     <link rel="icon" href="assets/images/logo.ico" type="image/x-icon" />
     <title>Weatherly</title>
 
